Reworked ld exercises

--- a/epam/DevelopmentToolchain/02-linker_intro.tex
+++ b/epam/DevelopmentToolchain/02-linker_intro.tex
@@ -30,6 +30,10 @@
 
 \mode<all>{\input{../../slides/toolchain/ld}}
 
+\section[example]{Практика}
+
+\mode<all>{\input{../../slides/toolchain/ld-exercises}}
+
 \section[example]{Примеры файлов}
 
 \mode<all>{\input{../../slides/toolchain/ld-examples}}
