Some modification for gdb

--- a/slides/debug/gdb.tex
+++ b/slides/debug/gdb.tex
@@ -111,7 +111,7 @@
     \item \verb+ objcopy --only-keep-debug <exec file> <dbg file>+
     \item \verb+ strip -g <exec file>+
     \item \verb+ objcopy  --add-gnu-debuglink=<dbg file> <exec file> + 
-    \item \texttt{gdb: set debug-files-directory}
+    \item \texttt{gdb: set debug-file-directory}
   \end{itemize} 
 \pause
   \begin{center}
