--- a/slides/intro/linux-boot.tex
+++ b/slides/intro/linux-boot.tex
@@ -1,11 +1,12 @@
 \begin{frame}{Процесс загрузки GNU/Linux}
-
+	\small
 	\begin{enumerate}
 		\item BIOS
 		\item MBR
 			\pause
 		\item Загрузка загрузчика
 		\begin{itemize}
+		\scriptsize
 			\item Stage 1 -- Первичный загрузчик
 			\item Stage 1,5 -- Загрузка ядра загрузчика и драйвера ФС
 			\item Stage 2 -- Чтение конфигурации
@@ -17,6 +18,7 @@
 			\pause
 		\item Передача управления ядру
 		\begin{itemize}
+		\scriptsize
 			\item Распаковка
 			\item Инициализация
 		\end{itemize}
@@ -28,6 +30,7 @@
 			\pause
 		\item Запуск программы init
 		\begin{itemize}
+		\scriptsize
 			\item Монтирование оставшихся разделов ФС
 			\item Инициализация оборудования
 			\item Запуск демонов
