Renumbered lectures for LinuxEssentials.
Additional fixes in slides.

--- a/epam/LinuxEssentials/06-users.tex
+++ b/epam/LinuxEssentials/06-users.tex
@@ -7,7 +7,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\newcommand{\defaultuser}{cur\_user}
+\newcommand{\defaultuser}{\$USER}
 
 \begin{document}
 
