--- a/epam/LinuxEssentials/LinuxEssentialsHandbook.tex
+++ b/epam/LinuxEssentials/LinuxEssentialsHandbook.tex
@@ -74,9 +74,10 @@
 \mode<all>{\input{../../slides/intro/practice01.tex}}
 
 
-
-
 \chapter{Командная строка}
+
+\section{Интерфейс командной строки}
+\mode<all>{\input{../../slides/cmdline/clui_vs_gui.tex}}
 
 \section{Командная оболочка (shell)}
 
@@ -92,10 +93,8 @@
 
 \mode<all>{\input{../../slides/fs/fs-structure}}
 
-\section{Полезные инструменты bash}
+\section{Дополнительные возможности оболочки}
 \mode<all>{\input{../../slides/cmdline/bash-intro}}
-
-\chapter{Управление процессами и перенаправления}
 
 \section{Процессы}
 \mode<all>{\input{../../slides/cmdline/process-intro}}
@@ -104,8 +103,6 @@
 \mode<all>{\input{../../slides/cmdline/pipes.tex}}
 \mode<all>{\input{../../slides/cmdline/io-redirection}}
 \mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
-
-\chapter{Полезные команды}
 
 \section{Полезные команды}
 
@@ -183,5 +180,7 @@
 \section{LVM}
 \mode<all>{\input{../../slides/disk/lvm.tex}}
 
+\chapter{Самостоятельная работа}
+\mode<all>{\input{../../slides/networking/practice}}
 
 \end{document}
