--- a/slides/intro/linux-boot.tex
+++ b/slides/intro/linux-boot.tex
@@ -1,12 +1,12 @@
 \begin{frame}{Процесс загрузки GNU/Linux}
-	\small
+	\scriptsize
 	\begin{enumerate}
 		\item BIOS
 		\item MBR
 			\pause
 		\item Загрузка загрузчика
 		\begin{itemize}
-		\scriptsize
+		\footnotesize
 			\item Stage 1 -- Первичный загрузчик
 			\item Stage 1,5 -- Загрузка ядра загрузчика и драйвера ФС
 			\item Stage 2 -- Чтение конфигурации
@@ -18,7 +18,7 @@
 			\pause
 		\item Передача управления ядру
 		\begin{itemize}
-		\scriptsize
+		\footnotesize
 			\item Распаковка
 			\item Инициализация
 		\end{itemize}
@@ -30,7 +30,7 @@
 			\pause
 		\item Запуск программы init
 		\begin{itemize}
-		\scriptsize
+		\footnotesize
 			\item Монтирование оставшихся разделов ФС
 			\item Инициализация оборудования
 			\item Запуск демонов
