--- a/epam/handbooks/epam-Linux_courses_handbook.tex
+++ b/epam/handbooks/epam-Linux_courses_handbook.tex
@@ -12,79 +12,8 @@
 
 \part{Введение}
 
-\chapter{GNU/Linux}
-\mode<all>{\input{../../slides/intro/vocabulary}}
-\section{Лицензии}
-\mode<all>{\input{../../slides/intro/licenses}}
-\section{Дистрибутивы ОС Linux}
-\mode<all>{\input{../../slides/intro/linux-distro}}
+\mode<all>{\input{LinuxEssentialsHandbook-themes}}
 
-\chapter{Процесс загрузки ОС Linux}
-\mode<all>{\input{../../slides/intro/linux-boot}}
-\section{Ядро Linux}
-\mode<all>{\input{../../slides/intro/linux-kernel}}
-\section{Userspace}
-\mode<all>{\input{../../slides/intro/initrd}}
-\mode<all>{\input{../../slides/intro/init-process}}
-\section{Практика}
-\mode<all>{\input{../../slides/intro/practice01.tex}}
-
-\chapter{Файловая структура}
-\mode<all>{\input{../../slides/fs/fs-structure}}
-
-\chapter{Командная строка}
-\mode<all>{\input{../../slides/cmdline/shell-intro}}
-\section{Работа в командной строке}
-\mode<all>{\input{../../slides/cmdline/help}}
-\mode<all>{\input{../../slides/cmdline/fs-navigation-cmd}}
-\mode<all>{\input{../../slides/cmdline/bash-intro}}
-\mode<all>{\input{../../slides/cmdline/commands1}}
-\mode<all>{\input{../../slides/cmdline/commands2}}
-\mode<all>{\input{../../slides/cmdline/io-redirection}}
-
-
-\section{Взаимодействие процессов}
-\mode<all>{\input{../../slides/cmdline/process-intro}}
-
-\chapter{Редакторы}
-\section{Потоковые редакторы}
-\mode<all>{\input{../../slides/cmdline/editors-intro}}
-\section{Vim}
-\mode<all>{\input{../../slides/cmdline/vim}}
-
-\section*{Упражнения}
-\mode<all>{\input{../../slides/cmdline/practice-text_and_fs}}
-
-\chapter{Механизмы разделения привилегий}
-
-\mode<all>{\input{../../slides/multiuser/multiuser-model.tex}}
-\mode<all>{\input{../../slides/multiuser/fs-permissions.tex}}
-\mode<all>{\input{../../slides/multiuser/account_files.tex}}
-\mode<all>{\input{../../slides/multiuser/pam.tex}}
-
-\chapter{Дисковая подсистема}
-\mode<all>{\input{../../slides/disk/disk-intro.tex}}
-\section{Блочные устройства}
-\mode<all>{\input{../../slides/disk/disk-simple_management.tex}}
-\section{RAID}
-\mode<all>{\input{../../slides/disk/raid.tex}}
-\section{LVM}
-\mode<all>{\input{../../slides/disk/lvm.tex}}
-\chapter{Управление пакетами}
-\mode<all>{\input{../../slides/packaging/intro1}}
-\section{RPM}
-\mode<all>{\input{../../slides/packaging/rpm}}
-\section{YUM}
-\mode<all>{\input{../../slides/packaging/repo}}
-
-\chapter{Сетевая подсистема}
-\mode<all>{\input{../../slides/networking/intro}}
-\mode<all>{\input{../../slides/networking/interface-management}}
-\mode<all>{\input{../../slides/networking/bridge}}
-\mode<all>{\input{../../slides/networking/useful-progs}}
-\mode<all>{\input{../../slides/networking/routing}}
-\mode<all>{\input{../../slides/networking/iptables}}
-\mode<all>{\input{../../slides/networking/practice}}
 
 \part{BASH}
 \chapter*{Bourne Again Shell}
@@ -188,7 +117,7 @@ TODO:
 Актуальная версия исходников:\\
 \url{https://github.com/d4s/linux_courses}
 
-Актуальная скомпилированных документов:\\
+Актуальная версия скомпилированных документов:\\
 \url{http://goo.gl/On1QI}
 
 \bigskip
@@ -197,6 +126,8 @@ TODO:
 		\item Денис Пынькин
 		\item Юрий Адамов
 		\item Павел Корнелюк
+		\item Викентий Лапа
+		\item Евгений Рыбак
 		\item {\it Здесь может быть Ваша фамилия}
 \end{enumerate}
 
