Minor fixes for bash02 lecture

--- a/slides/bash/vars.tex
+++ b/slides/bash/vars.tex
@@ -16,7 +16,7 @@
 	\begin{alertblock}{Используют без префикса}
 		\begin{itemize}
 			\item В объявлении declare или присвоении
-			\item в командe read ip\_addr
+			\item в командe {\tt read}
 			\item unset -- удаление
 			\item В арифметических операциях {\tt (( ... ))}
 		\end{itemize}
@@ -63,14 +63,13 @@ echo $num $lastarg
 
 
 \begin{frame}
-	\frametitle{Область видимости переменных}
+	\frametitle{Типы переменных}
 	\begin{itemize}
 		\item Локальные\\
 		    Область видимости -- текущая программа, функция или субшелл
 		\item Окружения
 		\item Позиционные параметры
 	\end{itemize}
-
 \end{frame}
 
 
