Added homework for doxygen

--- a/slides/toolchain/doxygen.tex
+++ b/slides/toolchain/doxygen.tex
@@ -133,3 +133,11 @@ typedef struct {
     \item Сгенерировать документацию
   \end{itemize}
 \end{frame} 
+
+\begin{frame}
+ \frametitle{Домашнее задание}
+  \begin{itemize}
+    \item Добавить документацию  в стиле doxygen в свою реализацию архиватора Хаффмана
+    \item Сгенерировать документацию
+  \end{itemize}
+\end{frame} 
