--- a/epam/handbooks/epam-Linux_courses_handbook.tex
+++ b/epam/handbooks/epam-Linux_courses_handbook.tex
@@ -115,10 +115,10 @@ TODO:
 \part*{Информация}
 
 Актуальная версия исходников:\\
-\url{https://github.com/d4s/linux_courses}
+\url{https://github.com/epam-llpd/linux_courses}
 
 Актуальная версия скомпилированных документов:\\
-\url{http://goo.gl/On1QI}
+\url{https://yadi.sk/d/S4HA4z6lqdMNQ}
 
 \bigskip
 
