--- a/epam/handbooks/report.tex
+++ b/epam/handbooks/report.tex
@@ -11,6 +11,7 @@
 \usepackage[T2A,T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
+\usepackage{cmap}
 
 %%\usepackage[orientation=landscape, size=custom, width=16, height=9.75, scale=0.5]{beamerposter}
 
