Fixes in handbook

--- a/epam/handbooks/epam-Linux_courses_handbook.tex
+++ b/epam/handbooks/epam-Linux_courses_handbook.tex
@@ -3,11 +3,14 @@
 \title{Software development in Linux environment\\Handbook}
 
 \mode<all>{\input{../../slides/toolchain/tikzinclude}}
+
 \begin{document}
 
 \maketitle
 
-\tableofcontents
+\includegraphics[width=1\textwidth]{new_prop.pdf}
+
+\color{black}{\tableofcontents}
 
 
 \part{Введение}
@@ -25,8 +28,6 @@
 \mode<all>{\input{../../slides/bash/params}}
 \section{Тесты и сравнения}
 \mode<all>{\input{../../slides/bash/tests}}
-%\section{Операторы}
-%\mode<all>{\input{../../slides/bash/operators}}
 \section{Арифметические операции}
 \mode<all>{\input{../../slides/bash/arithmetic}}
 \section{Циклы}
@@ -37,9 +38,6 @@
 \mode<all>{\input{../../slides/bash/functions}}
 \section{Массивы}
 \mode<all>{\input{../../slides/bash/arrays}}
-%\section{Строковые операторы}
-%\mode<all>{\input{../../slides/bash/strings}}
-%	[hideallsubsections]
 \section{Подстановка параметров}
 \mode<all>{\input{../../slides/bash/parameter_substitution}}
 \section{Манипуляции со строками}
@@ -57,10 +55,10 @@
 \mode<all>{\input{../../slides/toolchain/gnu-make}}
 
 \section{Автоматизация кроссплатформенной поддержки}
-TODO: 
-\begin{verbatim}
-\mode<all>{\input{../../slides/toolchain/autotools}}
-\end{verbatim}
+%TODO: 
+%\begin{verbatim}
+\mode<all>{\input{../../slides/toolchain/autotools-short}}
+%\end{verbatim}
 
 \chapter{Документирование кода}
 \mode<all>{\input{../../slides/toolchain/doxygen}}
