--- a/epam/handbooks/report.tex
+++ b/epam/handbooks/report.tex
@@ -1,5 +1,5 @@
 %\documentclass[ignorenonframetext, professionalfonts, hyperref={pdftex, unicode}]{beamer}
-\documentclass[pdftex,12pt,a4paper]{report}
+\documentclass[pdftex,12pt,a4paper,professionalfonts]{report}
 \usepackage{beamerarticle}
 
 \usetheme{Copenhagen}
@@ -69,12 +69,15 @@
 \logo{\includegraphics[width=1cm]{logo.png}}
 
 \usepackage[unicode=true]{hyperref}
+
 \hypersetup{
     pdfkeywords={Linux},
     bookmarksnumbered=true,
     bookmarksopen=true,
     bookmarksopenlevel=1,
     colorlinks=true,
+    linktoc=section,
+    linkcolor=blue,
     pdfstartview=Fit,
     pdfpagemode=UseOutlines,
     pdfpagelayout=TwoPageRight
