Added branding into LinuxEssentials
Minor changes in rpm slides.

--- a/epam/LinuxEssentials/01-intro.tex
+++ b/epam/LinuxEssentials/01-intro.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title{Введение в GNU/Linux}
 
@@ -95,4 +95,6 @@
 
 \mode<all>{\input{../../slides/intro/practice01.tex}}
 
+
+\mode<all>\input{../branding/completion}
 \end{document}
