--- a/epam/LinuxEssentials/02-command_line_intro.tex
+++ b/epam/LinuxEssentials/02-command_line_intro.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title{Введение в GNU/Linux\\Командная строка}
 
 \begin{document}
@@ -54,5 +54,5 @@ vimtutor ru
 \end{block}
 \end{frame}
 
+\mode<all>\input{../branding/completion}
 \end{document}
-
