--- a/epam/LinuxEssentials/03-bash_and_process.tex
+++ b/epam/LinuxEssentials/03-bash_and_process.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title{Введение в GNU/Linux\\Командная строка}
 
 \begin{document}
@@ -17,4 +17,5 @@
 \mode<all>{\input{../../slides/cmdline/io-redirection}}
 \mode<all>{\input{../../slides/cmdline/io-redirection-here.tex}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
