--- a/epam/LinuxEssentials/04-commands.tex
+++ b/epam/LinuxEssentials/04-commands.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title{Введение в GNU/Linux}
 
@@ -44,4 +44,5 @@
 \subsection{Редакторы}
 \mode<all>{\input{../../slides/cmdline/editors-intro}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
