--- a/epam/LinuxEssentials/05-rpm.tex
+++ b/epam/LinuxEssentials/05-rpm.tex
@@ -26,6 +26,9 @@
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\section{Подготовка инфраструктуры}
+\mode<all>{\input{../../slides/containers/lxd-infra_quick}}
+
 \section{Система управления пакетами}
 
 \mode<all>{\input{../../slides/packaging/intro}}
@@ -36,5 +39,4 @@
 \mode<all>{\input{../../slides/packaging/repo}}
 
 \mode<all>\input{../branding/completion}
-
 \end{document}
