--- a/epam/LinuxEssentials/06-users.tex
+++ b/epam/LinuxEssentials/06-users.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 \title{Пользователи и привилегии}
 
 
@@ -28,4 +28,5 @@
 
 \mode<all>{\input{../../slides/multiuser/pam.tex}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
