--- a/epam/LinuxEssentials/07-networking.tex
+++ b/epam/LinuxEssentials/07-networking.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title{Введение в GNU/Linux}
 
@@ -57,4 +57,5 @@
 
 %\mode<all>{\input{../../slides/networking/practice}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
