--- a/epam/LinuxEssentials/08-disk.tex
+++ b/epam/LinuxEssentials/08-disk.tex
@@ -1,4 +1,4 @@
-\input{common}
+\input{../branding/common}
 
 \title{Дисковая подсистема}
 
@@ -22,4 +22,5 @@
 \section{LVM}
 \mode<all>{\input{../../slides/disk/lvm.tex}}
 
+\mode<all>\input{../branding/completion}
 \end{document}
