Update to disk management slides: added crypto and minor corrections

--- a/epam/LinuxEssentials/08-disk.tex
+++ b/epam/LinuxEssentials/08-disk.tex
@@ -21,6 +21,8 @@
 \mode<all>{\input{../../slides/disk/disk-gpt.tex}}
 \section{LVM}
 \mode<all>{\input{../../slides/disk/lvm.tex}}
+\section{Криптография}
+\mode<all>{\input{../../slides/disk/crypt.tex}}
 
 \mode<all>\input{../branding/completion}
 \end{document}
