--- a/slides/disk/disk-simple_management.tex
+++ b/slides/disk/disk-simple_management.tex
@@ -24,12 +24,12 @@
 		\end{itemize}
 	\end{columns}
 
-	\bigskip
-	Понадобятся для упражнений:
-	\begin{itemize}
-			\item[*] {\tt chroot}
-			\item[*] {\tt kvm}
-	\end{itemize}
+%	\bigskip
+%	Понадобятся для упражнений:
+%	\begin{itemize}
+%			\item[*] {\tt chroot}
+%			\item[*] {\tt kvm}
+%	\end{itemize}
 \end{frame}
 
 
