--- a/slides/cmdline/editors-intro.tex
+++ b/slides/cmdline/editors-intro.tex
@@ -18,7 +18,7 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{Метасимволы}
+\begin{frame}[fragile]{Метасимволы - напоминание}
 	\begin{block}{grep, sed, awk}
 	\end{block}
 	\begin{itemize}
